--- a/package.json
+++ b/package.json
@@ -2,26 +2,44 @@
   "name": "spec-this",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
+  "bin": {
+    "spec-this-mcp": "./dist/mcp-server.js"
+  },
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
+    "build:mcp": "tsc mcp-server.ts --outDir dist --module nodenext --moduleResolution nodenext && chmod 755 dist/mcp-server.js",
     "start": "next start",
-    "lint": "eslint"
+    "start:mcp": "node dist/mcp-server.js",
+    "dev:mcp": "tsx mcp-server.ts",
+    "lint": "eslint",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.19.1",
+    "dotenv": "^17.2.3",
+    "drizzle-orm": "^0.44.6",
+    "next": "15.5.4",
+    "postgres": "^3.4.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.4"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
+    "drizzle-kit": "^0.31.5",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4",
+    "tsx": "^4.20.6",
+    "typescript": "^5"
   }
 }
