--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "spec-this-mcp": "./dist/mcp-server.js"
   },
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev --turbopack -p 3080",
     "build": "next build --turbopack",
     "build:mcp": "tsc --project tsconfig.mcp.json && chmod 755 dist/mcp-server.js",
     "start": "next start",
