--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "next dev --turbopack -p 3080",
     "build": "next build --turbopack",
     "build:mcp": "tsc --project tsconfig.mcp.json && chmod 755 dist/mcp-server.js",
-    "start": "next start",
+    "start": "next start -p 3080",
     "start:mcp": "node dist/mcp-server.js",
     "dev:mcp": "tsx mcp-server.ts",
     "lint": "eslint",
