--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
 # Database connection for local PostgreSQL
 # Default credentials for local development only
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/spec_this
+
+# Neo4j connection for file dependency graph
+NEO4J_URI=bolt://localhost:7687
+NEO4J_USERNAME=neo4j
+NEO4J_PASSWORD=neo4jpassword
