--- a/package.json
+++ b/package.json
@@ -20,16 +20,21 @@
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "neo4j:init": "tsx lib/db/neo4j-init.ts"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.19.1",
+    "@types/node-fetch": "^2.6.13",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.6",
+    "neo4j-driver": "^6.0.0",
     "next": "15.5.4",
     "postgres": "^3.4.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "tree-sitter": "^0.21.1",
+    "tree-sitter-typescript": "^0.23.2",
     "zod": "^3.25.76"
   },
   "devDependencies": {
