--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.19.1",
+    "@types/dagre": "^0.7.53",
     "@types/node-fetch": "^2.6.13",
+    "@xyflow/react": "^12.8.6",
+    "dagre": "^0.8.5",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.6",
     "mcp-handler": "^1.0.2",
