--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-# Database connection for local PostgreSQL
+# Database connection for Docker PostgreSQL (development)
 # Default credentials for local development only
-DATABASE_URL=postgresql://postgres:postgres@localhost:5432/spec_this
+# Docker maps internal port 5432 to host port 5433
+DATABASE_URL=postgresql://postgres:postgres@localhost:5433/spec_this_development
 
 # Neo4j connection for file dependency graph
 NEO4J_URI=bolt://localhost:7687
